--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "react-workshop-feb2024",
   "private": true,
+  "homepage": "https://leamuno.github.io/react-pokedex/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reveal.js": "^5.0.5"
